API refresh - part two (jextract edition)
Reviewed-by: jvernee